poniendo mis propia paleta de colores analoga

--- a/4-app/src/scss/variables/colors-theme-primary.scss
+++ b/4-app/src/scss/variables/colors-theme-primary.scss
@@ -1,6 +1,6 @@
 $color-white: #fff;
 $color-black: #000;
-$color-primary: #ffd000;
-$color-secondary: #181d20;
-$color-terciary: #ff5252;
-$color-cuaternary: #181d20;
+$color-primary: #E0DD10;
+$color-secondary: #616024;
+$color-terciary: #E6E355;
+$color-cuaternary: #ADAB0C;
