--- a/4-app/src/scss/variables/typography.scss
+++ b/4-app/src/scss/variables/typography.scss
@@ -1,8 +1,8 @@
 // Importa aquí tus fuentes.
-@import url("https://fonts.googleapis.com/css?family=Arvo:400,400i,700,700i&display=swap");
+@import url("http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext");
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800&display=swap");
 
-$font-primary: "Arvo", serif;
+$font-primary: "Lato", sans-serif;
 $font-secondary: "Open Sans", sans-serif;
 
 $font-size-small: 20px;
